--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -66,6 +66,15 @@
       font-size: 16px;
     }
 
+    input.search-input-dark::placeholder {
+      color: #066c74 !important;
+    }
+
+    input.search-input-light::placeholder {
+      color: #000 !important;
+    }
+    
+
     .search-icon {
       position: absolute;
       right: 10px;
