--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -8,12 +8,13 @@ body{
     background-color: #000;
 }
 
-
+/* 
 .goHome{
     border: 1px solid #fff;
     height: 50px;
     width: 20%;
+    padding: 20px;
 }
 .goHome button{
-padding: 10px;
-}
+padding: 20px;
+} */
